# python_pesq_with_pybind11

./: CMakeLists.txt  ReadMe.md  pybind11
include/: pesq.h
src/: pesqdsp.cpp  pesqio.cpp  pesqmod.cpp  python_pesq.cpp
test/: test.py
